--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,10 +1,11 @@
-NAME = libftprintf.a
 CC = gcc
 RM = rm -f
 CFLAGS = -Wall -Wextra -Werror -I.
 
-SRCS =./srcs/ft_printf.c \
-		./srcs/conversion.c \
+SRCS = ft_itoa.c \
+		ft_putchar_fd.c \
+		ft_putstr_fd.c \
+		ft_strlen.c \
 
 OBJS = $(SRCS:.c=.o)
 
