still need some revised

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -2,6 +2,9 @@ NAME = libft.a
 CC = gcc
 RM = rm -f
 CFLAGS = -Wall -Wextra -Werror -I.
+BUILD_DIR = ./build
+SRC_DIRS = ./
+INCS_DIR = ./
 
 SRCS	=	ft_baselen.c \
 			ft_itoa.c \
@@ -9,15 +12,19 @@ SRCS	=	ft_baselen.c \
 			ft_putstr_fd.c \
 			ft_strlen.c \
 
-OBJS = $(SRCS:.c=.o)
+OBJS = $(SRCS:%.c=$(BUILD_DIR)/%.o)
 
-all: $(NAME)
+all: $(BUILD_DIR)/$(NAME)
 
-$(NAME): $(OBJS)
+$(BUILD_DIR)/$(NAME): $(OBJS) $(INCS)
 	ar rcs $(NAME) $(OBJS)
 
+$(BUILD_DIR)/%.c.o: %.c
+	mkdir -p $(dir $@)
+	$(CC) $(CFLAGS) -I $(INCS_DIR) -c $< -o $@
+
 clean:
-	$(RM) $(OBJS)
+	$(RM) -r $(BUILD_DIR)
 
 fclean: clean
 	$(RM) $(NAME)
