--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,16 +6,20 @@ BUILD_DIR = ./build
 SRC_DIRS = ./
 INCS_DIR = ./
 
-SRCS = $(addprefix $(SRC_DIRS), ft_baselen.c ft_itoa.c ft_putchar_fd.c ft_putstr_fd.c ft_strlen.c)
+SRCS = ft_baselen.c \
+			 		ft_itoa.c\
+					ft_putchar_fd.c\
+					ft_putstr_fd.c\
+					ft_strlen.c
 
-OBJS = $(SRCS:$(SRC_DIRS)/%.c=$(BUILD_DIR)/%.o)
+OBJS = $(SRCS:%=$(BUILD_DIR)/%.o)
 
 all: $(BUILD_DIR)/$(NAME)
 
 $(BUILD_DIR)/$(NAME): $(OBJS) $(INCS)
 	ar rcs $(NAME) $(OBJS)
 
-$(BUILD_DIR)/%.o: $(SRC_DIRS)/%.c
+$(BUILD_DIR)/%.c.o: %.c	
 	mkdir -p $(dir $@)
 	$(CC) $(CFLAGS) -I $(INCS_DIR) -c $< -o $@
 
